--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/node": "18.7.16",
